# marine-route-planning

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: build.yml
BosphorusVGPathMPC_staging/: CMakeLists.txt  README.md
BosphorusVGPathMPC_staging/config/: route_planner_bosphorus_mesh.ini
BosphorusVGPathMPC_staging/dataset/: osm_bathymetry_istanbul_genoa.geojson  osm_tss_istanbul_genoa.geojson
BosphorusVGPathMPC_staging/dataset/bosphorus/buffered/: bosphorus_land_buffer_100m.geojson  bosphorus_land_buffer_150m.geojson
BosphorusVGPathMPC_staging/dataset/bosphorus/polygon/: land_polygon.geojson
BosphorusVGPathMPC_staging/doc/: README.md
BosphorusVGPathMPC_staging/scenarios/: bosphorus_tracking.ini  rotaoptimalds_default.ini  rotaoptimalds_obstacle.ini
BosphorusVGPathMPC_staging/scripts/: build_bosphorus_datasets.sh
BosphorusVGPathMPC_staging/src/: bosphorus_vg_mpc_main.cpp  buffered_land_dataset_builder.cpp  main.cpp  obstacle_avoidance.cpp  obstacle_avoidance.hpp  planner.h  planner_io.cpp  planner_tss.cpp  reference_path.cpp  reference_path.hpp  rota_optimal_ds.cpp  rota_optimal_ds.hpp  rota_optimal_ds_main.cpp  route_planner_core.cpp  route_planner_core.hpp  scenario_parser.cpp  scenario_parser.hpp
config/: route_planner_bosphorus_mesh.ini  route_planner_buffer200_mesh.ini  route_planner_izmir_venedik_generic_cache.ini  route_planner_izmir_venedik_osm_land.ini  route_planner_izmir_venedik_osm_land_fast.ini  route_planner_marmara_straits_coastline_polygon.ini  route_planner_marmara_straits_mesh.ini  route_planner_mesh.ini  route_planner_mesh_smoke_test.ini
dataset/bosphorus/buffered/: bosphorus_land_buffer_050m.geojson  bosphorus_land_buffer_200m.geojson  sea_bands.geojson
dataset/bosphorus/mesh/: land_mesh.geojson
scripts/: build_land_mesh.sh  download_bathymetry_osm.sh  download_coastline_data.sh  download_osm_land_geojson.sh  download_osm_land_world_dataset.sh  download_tss_osm.sh
src/: adaptive_grid_debug.cpp  main.cpp  planner_cli.cpp  planner_geometry.cpp  planner_io.cpp  world_layers_desktop.cpp  world_layers_support.cpp  world_layers_support.h  world_layers_viewer.cpp
